syntax = "proto3";

package ova.serial.api;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/ozonva/ova-serial-api/pkg/ova-serial-api;ova_serial_api";

service OvaSerialV1 {
  rpc CreateSerial (CreateSerialRequestV1) returns (CreateSerialResponseV1);
  rpc GetSerial (GetSerialRequestV1) returns (GetSerialResponseV1);
  rpc ListSerials (google.protobuf.Empty) returns (ListSerialsResponseV1);
  rpc RemoveSerial (RemoveSerialRequestV1) returns (google.protobuf.Empty);
}

message CreateSerialRequestV1 {
  uint64 user_id = 1;
  string Title = 2;
  string Genre = 3;
  uint32 Year = 4;
  uint32 Seasons = 5;
}

message CreateSerialResponseV1 {
  uint64 id = 1;
}

message GetSerialRequestV1 {
  uint64 id = 1;
}

message GetSerialResponseV1 {
  SerialV1 serial = 1;
}

message ListSerialsResponseV1 {
  repeated SerialV1 serials = 1;
}

message RemoveSerialRequestV1 {
  uint64 id = 1;
}

message SerialV1 {
  uint64 id = 1;
  uint64 user_id = 2;
  string Title = 3;
  string Genre = 4;
  uint32 Year = 5;
  uint32 Seasons = 6;
}
